2003-07-01  Zoltan Varga  <vargaz@freemail.hu>

	* StackFrameTest.cs (TestGetMethod): Remove test for method name, since
	it is not guaranteed to be 'InternalInvoke'.

2003-06-10  Nick Drochak <ndrochak@gol.com>

	* StackFrameTest.cs: More cleanups.  Now *all* tests pass.

2003-06-10  Nick Drochak <ndrochak@gol.com>

	* StackFrameTest.cs: Cleanups.  Now tests pass.

2003-04-17  Nick Drochak  <ndrochak@gol.com>

	* StackFrameTest.cs: Use nunit version 2 style.

2003-01-27  Zoltan Varga  <vargaz@freemail.hu>

	* StackTraceTest.cs: Added test for unthrown exceptions.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-06-19  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Add missing test: DebugTest

2002-02-10  Nick Drochak  <ndrochak@gol.com>

	* DebugTest.cs: Put in correct namespace.
	* TextWriterTraceListenerTest.cs: Put in correct namespace.