@@ -1,3 +1,8 @@
+2003-08-19  Nick Drochak <ndrochak@gol.com>
+
+	* StackFrameTest.cs: Isolate test failure by making tests finer
+	grained.
+
 2003-07-01  Zoltan Varga  <vargaz@freemail.hu>
 
 	* StackFrameTest.cs (TestGetMethod): Remove test for method name, since
